--- a/index.html
+++ b/index.html
@@ -27,4 +27,5 @@
         settext_for_tying(0,"echo Introduction.txt",600)
         var bd=document.getElementsByTagName("body")[0];
     </script>
+    <!--©By bossgeeg123456-->
 </html>
