--- a/port/index.html
+++ b/port/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" >
         <link rel="stylesheet" href="pstyle.css" >
-        <script src="script.js"></script>
+        <script src="https://raw.githubusercontent.com/BoszGTec/boszgtec.github.io/main/script/typingstart/typingstart.js"></script>
         
     </head>
     <body onscroll="check()" >
