--- a/port/index.html
+++ b/port/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="pstyle.css" >
         <script src="script.js"></script>
         
+        <title>Supaschai's Port</title>
     </head>
     <body onscroll="check()" >
         <div class="p1" id="p1">
