--- a/port/index.html
+++ b/port/index.html
@@ -82,9 +82,9 @@
                     เขียนภาษา  
                     <img height=20px src="https://camo.githubusercontent.com/c8d97699db3542a59ec80ef7b4c6ecfe44885fd8fc19b04dbbccf098ca940fe1/68747470733a2f2f63646e2e737667706f726e2e636f6d2f6c6f676f732f632e737667" />
                     C
-                    และภาษา Python 
+                    และภาษา
                     <img height=20px src="https://camo.githubusercontent.com/26043b6db7e2aee509448570c835702e9cd39397b53b18ac86b2b11090d08c26/68747470733a2f2f63646e2e737667706f726e2e636f6d2f6c6f676f732f707974686f6e2e737667" />
-                    ได้
+                    Python ได้
                 </p>
                 <p>
                     ใช้ 
