--- a/port/index.html
+++ b/port/index.html
@@ -31,8 +31,9 @@
                 <p>ชื่อเล่น &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: บอส</p>
                 <p>วันเกิด&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp : 4/6/2546</p>
                 <p>งานอดิเรก&nbsp&nbsp&nbsp&nbsp: 
+                    ทดลองใช้โปรแกรมจาก 
                     <img height=20px src="https://raw.githubusercontent.com/BoszGTec/BoszGTec/main/My%20source/Image/GitHub-Mark-Light-120px-plus.png" />
-                    ทดลองใช้โปรแกรมจาก GitHub
+                    GitHub
                     <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                     ทดลองตัดต่อวิดีโอเล่น
                     <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
