--- a/port/index.html
+++ b/port/index.html
@@ -197,9 +197,7 @@
             
             </div>
         </div>
-        <div class="footer">
-            <p>©bossgeeg123456</p>
-        </div>
+  
         <div id="navi">
             <a href="#p1">
                 <div class="radio">
@@ -219,6 +217,10 @@
                     <div class="rd" id="radio_0"></div>
                 </div>
             </a>
+        </div>
+        
+        <div class="footer">
+            <p>©<a href="mailto:bossgeeg123456@gmail.com">bossgeeg123456</a></p>
         </div>
     </body>
     <script>
