--- a/port/index.html
+++ b/port/index.html
@@ -198,6 +198,21 @@
             </div>
         </div>
   
+        <div id="form">
+            <iframe name="blank" hidden >
+
+            </iframe>
+            <form action="https://docs.google.com/forms/u/3/d/e/1FAIpQLSeU2931tJzcByMCaXklaiJ1f3E67nfegcLJFMtpKus8mTzNzQ/formResponse" target="blank" >
+                <label>อีเมล</label> <br>
+                <input id="email" type="email" name="entry.774775268">
+                <br> <label>ความคิดเห็น</label> <br>
+                <textarea name="entry.364478082"></textarea>
+                <br>
+                <input id="submit" type="submit" value="ส่ง"  >
+                
+            </form>
+        </div>
+        
         <div class="footer">
             <p>©<a href="mailto:bossgeeg123456@gmail.com">bossgeeg123456</a></p>
         </div>
