--- a/port/index.html
+++ b/port/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css" >
         <link rel="stylesheet" href="pstyle.css" >
         <script src="script.js"></script>
+        <script src="onc.js" > </script>
         
         <title>Supaschai's Port</title>
     </head>
@@ -208,7 +209,7 @@
                 <br> <label>ความคิดเห็น</label> <br>
                 <textarea name="entry.364478082"></textarea>
                 <br>
-                <input id="submit" type="submit" value="ส่ง"  >
+                <input id="submit" type="submit" value="ส่ง" onclick="onc();" >
                 
             </form>
         </div>
