--- a/port/index.html
+++ b/port/index.html
@@ -209,7 +209,7 @@
                 <br> <label>ความคิดเห็น</label> <br>
                 <textarea name="entry.364478082"></textarea>
                 <br>
-                <input id="submit" type="submit" value="ส่ง" onclick="onc();" >
+                <input id="submit" type="submit" value="ส่ง"  >
                 
             </form>
         </div>
