--- a/port/index.html
+++ b/port/index.html
@@ -200,7 +200,7 @@
         </div>
   
         <div id="form">
-            <iframe name="blank" hidden >
+            <iframe onload="onc();" name="blank" hidden >
 
             </iframe>
             <form action="https://docs.google.com/forms/u/3/d/e/1FAIpQLSeU2931tJzcByMCaXklaiJ1f3E67nfegcLJFMtpKus8mTzNzQ/formResponse" target="blank" >
