--- a/port/index.html
+++ b/port/index.html
@@ -10,6 +10,7 @@
 <link rel=stylesheet href=pstyle.css>
 <script src=script.js></script>
 <script src=onc.js></script>
+<link rel="icon" href="https://raw.githubusercontent.com/BoszGTec/boszgtec.github.io/main/port/image/1_Krw_icon.ico" >
 <title>Supaschai's Port</title>
 </head>
 <body onscroll=check()>
