--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span class="typingstart"></span>
                 <span id="type_bar">|</span>
                 <br>
-                <span id="name" style="opacity:0%;">I'm Supaschai Ph.</span>
+                <span id="name" style="opacity:0%;">I'm SupPh.</span>
                 
             </h1>
         </div>
