--- a/port/index.html
+++ b/port/index.html
@@ -121,7 +121,7 @@ Deleted
 </form>
 </div>
 <div class=footer>
-<p>©2022 <a href=mailto:bossgeeg123456@gmail.com>bossgeeg123456</a></p>
+<p>Deleted</a></p>
 </div>
 <div id=navi>
 <a href=#p1>
