--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
     </body>
     <script>
-        settext_for_tying(0,"echo Introduction.txt",600)
+        settext_for_tying(0,"echo Introduction.html",600)
         var bd=document.getElementsByTagName("body")[0];
     </script>
     <!--©By bossgeeg123456-->
