--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -15,10 +15,10 @@
   
    <br/>
    <center>
-    <textarea type="text" class="form-control" id="Input" rows="5" oninput="" ></textarea>
+    <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" ></textarea>
    </center>
 
   </div>
-  <script src="Source/script.js" ></script>
+  <script src="script/script.js" ></script>
  </body>
 </html>
