--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -10,10 +10,11 @@
   <div style="width : 90% ;" >
 
    <h1>HTML Space</h1>
-   
+   <label class="form-label">Output</label>
    <div id="content" style="border : 0.5px solid #212529; height:250px; width:100%; " ></div>
   
    <br/>
+   <label class="form-label">Input</label>
    <center>
     <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" ></textarea>
    </center>
