--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -11,12 +11,15 @@
 
    <h1>HTML Space</h1>
    <label class="form-label">Output</label>
-   <div id="Content" style="border : 0.5px solid #212529; height:250px; width:100%; " ></div>
+   <div id="Content" style="border : 0.5px solid #212529; height:250px; 
+   width:100%; padding: 6px; margin : 10px ; " ></div>
   
    <br/>
    <label class="form-label">Input</label>
    <center>
-    <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" ></textarea>
+    <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" 
+    style="padding: 6px; margin : 20px ;" >
+    </textarea>
    </center>
 
   </div>
