--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -7,22 +7,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
  </head>
  <body>
-  <div style="width : 90% ;" >
+  <h1>HTML Space</h1>
+  <center>
+   <div style="width : 90% ;" >
 
-   <h1>HTML Space</h1>
-   <label class="form-label">Output</label>
-   <div id="Content" style="border : 0.5px solid #212529; height:250px; 
-   width:100%; padding: 6px; margin : 10px ; " ></div>
+    <div id="Content" style="border : 0.5px solid #212529; height:250px; 
+    width:100%; padding: 6px;" ></div>
   
-   <br/>
-   <label class="form-label">Input</label>
-   <center>
+    <br/>
     <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" 
-    style="padding: 6px; margin : 20px ;" >
+    placeholder="Type Here" >
     </textarea>
-   </center>
 
-  </div>
+   </div>
+  </center>
   <script src="script/script.js" ></script>
  </body>
 </html>
