--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -16,8 +16,7 @@
   
     <br/>
     <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" 
-    placeholder="Type Here" >
-    </textarea>
+    placeholder="Type Here" ></textarea>
 
    </div>
   </center>
