--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -8,18 +8,16 @@
  </head>
  <body>
   <h1>HTML Space</h1>
-  <center>
    <div style="width : 90% ;" >
 
     <div id="Content" style="border : 0.5px solid #212529; height:250px; 
-    width:100%; padding: 6px;" ></div>
+    width:100%; padding: 6px; margin-left : auto; margin-right : auto; " ></div>
   
     <br/>
     <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" 
-    placeholder="Type Here" ></textarea>
+    placeholder="Type Here" style="margin-left : auto; margin-right : auto; "></textarea>
 
    </div>
-  </center>
   <script src="script/script.js" ></script>
  </body>
 </html>
