--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -8,13 +8,13 @@
  </head>
  <body>
   <h1>HTML Space</h1>
-   <div style="width : 90% ;" >
+   <div >
 
     <div id="Content" style="border : 0.5px solid #212529; height:250px; 
-    width:100%; padding: 6px; margin-left : auto; margin-right : auto; " ></div>
+    width:100%; padding: 6px; overflow : scroll ; " ></div>
   
     <br/>
-    <textarea type="text" class="form-control" id="Input" rows="5" oninput="Display_html()" 
+    <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
     placeholder="Type Here" style="margin-left : auto; margin-right : auto; "></textarea>
 
    </div>
