--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -5,17 +5,28 @@
  <head>
   <title>HTML Test Space</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- </head>
+  <style>
+   body{
+    margin : 10px;
+   }
+   #Content{
+    height:250px; 
+    width :100%; 
+    padding : 6px; 
+    overflow : scroll;
+    border-radius : 10px;
+   }
+ </style>
+</head>
  <body>
   <h1>HTML Space</h1>
    <div >
 
-    <div id="Content" style="border : 0.5px solid #212529; height:250px; 
-    width:100%; padding: 6px; overflow : scroll ; " ></div>
+    <div id="Content" class="form-control" ></div>
   
     <br/>
     <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
-    placeholder="Type Here" style="margin-left : auto; margin-right : auto; "></textarea>
+    placeholder="Type Here" ></textarea>
 
    </div>
   <script src="script/script.js" ></script>
