--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -16,6 +16,10 @@
     overflow : scroll;
     border-radius : 10px;
    }
+   #Key{
+    margin-top : 10px;
+    height : 10px;
+   }
  </style>
 </head>
  <body>
@@ -29,6 +33,7 @@
     placeholder="Type Here" ></textarea>
 
    </div>
+   <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
  </body>
 </html>
