--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -23,9 +23,11 @@
  </style>
 </head>
  <body>
-  <h1>HTML Space</h1>
-   <div >
-
+  <div id="theme">
+   <h1>HTML Space</h1>
+  </div>
+ 
+  <div >
     <div id="Content" class="form-control" ></div>
   
     <br/>
