--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -5,24 +5,8 @@
  <head>
   <title>HTML Test Space</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />   
-  <style>
-   body{
-    margin : 10px;
-   }
-   #Content{
-    height:250px; 
-    width :100%; 
-    padding : 6px; 
-    margin-top : 20px;
-    overflow : scroll;
-   }
-   #Key{
-    font-size : 5px;
-    margin-top : 10px;
-    height : 10px;
-   }
- </style>
-</head>
+  <link href="style/style.css" rel="stylesheet" />
+ </head>
  <body>
   <div id="theme" class="d-flex justify-content-between">
    <h1>HTML Space</h1>
