--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -16,6 +16,8 @@
     </svg>
    </button>
   </div>
+
+  <input id="ct-height" oninput="re-ct()" style="width: 200px ;" type="range" class="form-range" min="100" max="1000" / >
  
   <div >
     <div id="Content" class="form-control" ></div>
@@ -24,10 +26,11 @@
     <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
     placeholder="Type Here" ></textarea>
 
-   </div>
-   <input class="form-control" id="Key" />
+  </div>
+  <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
+  <script src="script/re-content.js ></script>
  </body>
 </html>
 
