--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -30,7 +30,7 @@
   <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
-  <script src="script/re-content.js ></script>
+  <script src="script/re-content.js" ></script>
  </body>
 </html>
 
