--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -17,7 +17,9 @@
    </button>
   </div>
 
-  <input id="ct-height" oninput="re-ct()" style="width: 200px ;" type="range" class="form-range" min="100" max="1000" / >
+  <div>
+   <input id="ct-height" oninput="re-ct()" value="250" type="range" class="form-range" min="100" max="1000" / >
+  </div>
  
   <div >
     <div id="Content" class="form-control" ></div>
