--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div>
-   <input id="ct-height" oninput="re-ct()" value="250" type="range" class="form-range" min="100" max="1000" / >
+   <input id="ct-height" oninput="re_ct()" value="250" type="range" class="form-range" min="100" max="1000" / >
   </div>
  
   <div >
