--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -27,8 +27,8 @@
     <br/>
     <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
     placeholder="Type Here" ></textarea>
-
   </div>
+  <input type="button" id="Bt-del" value="×" class="btn btn-danger " />
   <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
