--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -28,7 +28,7 @@
     <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
     placeholder="Type Here" ></textarea>
   </div>
-  <input type="button" id="Bt-del" value="×" class="btn btn-danger " />
+  <input type="button" id="Bt-del" value="×" class="btn btn-danger " onclick="document.getElemeById('Input').value='' ; Display_html() " />
   <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
