--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -25,10 +25,31 @@
     <div id="Content" class="form-control" ></div>
   
     <br/>
-    <textarea type="text" class="form-control" id="Input" rows="10" oninput="Display_html()" 
-    placeholder="Type Here" ></textarea>
+
+    <div>
+     <div class="d-flex justify-content-between box-title">
+      <label class="form-label title"  >HTML</label>
+      <input type="button" value="×" class="btn btn-danger title-bt" 
+       onclick="document.getElementById('Input').value='' ; Display_html() " />
+     </div>
+     <textarea type="text" class="form-control box-under-title" id="Input" rows="10" oninput="Display_html()" 
+     placeholder="Type Here" ></textarea>
+    </div>
+
+    <br/>
+
+    <div>
+     <div class="d-flex justify-content-between box-title">
+      <label class="form-label title"  >CSS</label>
+      <input type="button" value="×" class="btn btn-danger title-bt" 
+       onclick="document.getElementById('Input-css').value='' ; Display_html() " />
+     </div>
+     <textarea class="form-control box-under-title" id="Input-css" rows="10" oninput="Display_html()" 
+     placeholder="Type Here" ></textarea>
+   </div>
+
   </div>
-  <input type="button" id="Bt-del" value="×" class="btn btn-danger " onclick="document.getElementById('Input').value='' ; Display_html() " />
+
   <input class="form-control" id="Key" />
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
