--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -60,6 +60,12 @@
   </div>
 
   <input class="form-control" id="Key" />
+  <div class="rule">
+   <div>ข้อตกลงการใช้งาน : ห้ามนำโค้ดที่มีความเสี่ยงหรืออันตรายมาใช้ที่นี้</div>
+   <input id="inp-rule" type="checkbox" class="form-check-input"/>
+   <label class="form-check-label">&nbspฉันยอมรับข้อตกลงทั้งหมด</label>
+  </div>
+
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
   <script src="script/re-content.js" ></script>
