--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -59,7 +59,7 @@
    
   </div>
 
-  <input class="form-control" id="Key" />
+  <input class="form-control" hidden id="Key" />
   <div class="rule">
    <div>ข้อตกลงการใช้งาน : ห้ามนำโค้ดที่มีความเสี่ยงหรืออันตรายมาใช้ที่นี้</div>
    <input id="inp-rule" oninput="c_rule()" type="checkbox" class="form-check-input"/>
