--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -66,6 +66,7 @@
    <label class="form-check-label">&nbspฉันยอมรับข้อตกลงทั้งหมด</label>
   </div>
 
+  <script src="script/c_key.js" ></script>
   <script src="script/script.js" ></script>
   <script src="script/theme.js" ></script>
   <script src="script/re-content.js" ></script>
