--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -64,6 +64,11 @@
    <div>ข้อตกลงการใช้งาน : ห้ามนำโค้ดที่มีความเสี่ยงหรืออันตรายมาใช้ที่นี้</div>
    <input id="inp-rule" oninput="c_rule()" type="checkbox" class="form-check-input"/>
    <label class="form-check-label">&nbspฉันยอมรับข้อตกลงทั้งหมด</label>
+   <p>
+    ⛔classที่ห้ามใช้ : box-title , title , title-bt , box-under-title , rule , flex-ct
+    <br/>
+    ⛔idที่ห้ามใช้ : theme , Key , ct-height , Input , Input-css , Content , Key , Bt-del , inp-rule
+   </p>
   </div>
 
   <script src="script/c_key.js" ></script>
