--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -69,9 +69,9 @@
    <input id="inp-rule" oninput="c_rule()" type="checkbox" class="form-check-input"/>
    <label class="form-check-label">&nbspฉันยอมรับข้อตกลงทั้งหมด</label>
    <p>
-    ⛔classที่ห้ามใช้ : box-title , title , title-bt , box-under-title , rule , flex-ct
+    ⛔classที่ห้ามใช้ : box-title , box-under-title, flex-ct , rule , title , title-bt , title-bt2
     <br/>
-    ⛔idที่ห้ามใช้ : theme , Key , ct-height , Input , Input-css , Content , Key , Bt-del , inp-rule
+    ⛔idที่ห้ามใช้ : Bt-del , Content , Input , Input-css , Key , ct-height , dis-css , dis-html , inp-rule , theme
    </p>
   </div>
 
