--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -81,6 +81,7 @@
   <script src="script/re-content.js" ></script>
   <script src="script/check-rule.js" ></script>
   <script src="script/dis-elem.js" ></script>
+  <script src="https://cdn.jsdelivr.net/gh/BoszGTec/My-Source/script/addcredit/v1.js" ></script>
  </body>
 </html>
 
