--- a/test_space/HTML_SP/index.html
+++ b/test_space/HTML_SP/index.html
@@ -72,6 +72,9 @@
     ⛔classที่ห้ามใช้ : box-title , box-under-title, flex-ct , rule , title , title-bt , title-bt2
     <br/>
     ⛔idที่ห้ามใช้ : Bt-del , Content , Input , Input-css , Key , ct-height , dis-css , dis-html , inp-rule , theme
+    <br/>
+    <img height=25px src="https://camo.githubusercontent.com/114a0bc512f4a3a808900d175b031a6dc0776a85bc6b1c5eaee3021b13581ab1/68747470733a2f2f63646e2e737667706f726e2e636f6d2f6c6f676f732f626f6f7473747261702e737667" />
+    นำเข้าBootstrap แล้ว
    </p>
   </div>
 
