--- a/test_space/HTML_SP/bulma.html
+++ b/test_space/HTML_SP/bulma.html
@@ -23,7 +23,7 @@
   </div>
  
   <div >
-    <div id="Content" class="input" ></div>
+    <div id="Content" class="textarea" ></div>
   
     <br/>
     <div class="flex-ct" >
